packages/stylist-macros/tests/css_macro/selector_as_attribute-fail.stderr
error: expected curly braces
 --> $DIR/selector_as_attribute-fail.rs:3:30
  |
3 |         looks_like_selector(): blue;
  |                              ^
